--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,22 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceMap": true,
-    "noImplicitAny": false,
-    "target": "es5",
-    "module": "commonjs",
-    "lib": [
-      "es2015",
-      "es2017",
-      "dom"
-    ],
-    "jsx": "react-jsx",
     "allowJs": true,
+    "baseUrl": ".",
     "esModuleInterop": true,
-    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "react",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noEmit": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
-  }
+    },
+    "removeComments": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "es5"
+  },
+  "exclude": ["node_modules", "public", "build"]
 }
