--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "dotenv": "^16.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.11.2",
     "redux": "^5.0.1",
     "redux-observable": "^3.0.0-rc.2",
