--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
     "strict": true,
     "target": "es5"
   },
-  "exclude": ["node_modules", "public", "build"]
+  "exclude": ["node_modules", "public", "build"],
+  "include": ["src", "src/types/custom.d.ts"]
 }
